--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+*
+!*.*
+!*/
+!Dockerfile
+!Makefile
+# Reference https://github.com/github/gitignore/blob/master/Go.gitignore
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+
+# OS General
+Thumbs.db
+.DS_Store
+
+# project
+*.cert
+*.key
+*.log
+bin/
+
+# Develop tools
+.vscode/
+.idea/
+*.swp
+.cov
+
+*.json
+*.tar.*
+*.tar
+*.gz
+*.zip
+*.rar
+
 # Logs
 logs
 *.log
